tests/sources/invalid/classes/class_method_duplicate_param.fire
// A class (instance) method with two parameters sharing the same name --
// the second declaration shadows the first within the method's own
// parameter scope, which is rejected the same way outer-scope shadowing is.
class Foo {
    v: int32;

    fn Foo(v: int32) {
        this.v = v;
    }

    fn method(x: int32, x: int32) -> void {  //~ ERROR FS-SEM-0010 @25
    }
}

fn main() -> int32 {
    return 0;
}
